[gd_scene load_steps=3 format=3 uid="uid://bpsia1in7jcs6"]

[ext_resource type="Script" path="res://addons/treehave/treehave.gd" id="1_muj4c"]
[ext_resource type="Script" path="res://addons/treehave/tree_edit.gd" id="2_p620u"]

[node name="Treehave" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_muj4c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="MenuHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UndoButton" type="Button" parent="VBoxContainer/MenuHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Undo Graph Action"

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
connection_lines_curvature = 0.0
connection_lines_thickness = 0.0
connection_lines_antialiased = false
script = ExtResource("2_p620u")

[connection signal="pressed" from="VBoxContainer/MenuHBox/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="arrange_nodes_requested" from="VBoxContainer/GraphEdit" to="." method="_arrange_current_tree_graph"]
[connection signal="delete_nodes_request" from="VBoxContainer/GraphEdit" to="." method="_on_graph_edit_delete_nodes_request"]
[connection signal="mouse_entered" from="VBoxContainer/GraphEdit" to="." method="_on_graph_edit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/GraphEdit" to="." method="_on_graph_edit_mouse_exited"]
[connection signal="node_selected" from="VBoxContainer/GraphEdit" to="." method="_on_graph_edit_node_selected"]
